--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "ponto-eletronico-admin",
   "version": "1.0.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
