--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -9,20 +9,22 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-    depends_on:
-      - db
+      - TZ=America/Sao_Paulo
     volumes:
       - ./backend:/app
       - ~/.m2:/root/.m2
+    depends_on:
+      - db
 
   db:
-    image: postgres:14
-    environment:
-      POSTGRES_DB: ponto_eletronico
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+    image: postgres:14-alpine
     ports:
       - "5432:5432"
+    environment:
+      - POSTGRES_DB=ponto_eletronico
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - TZ=America/Sao_Paulo
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
