--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ./backend:/app
       - ~/.m2:/root/.m2
+      - ./backend/logs:/app/logs
     depends_on:
       - db
 
