--- a/mobile-app/tsconfig.json
+++ b/mobile-app/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "jsx": "react-native",
+    "lib": ["ES2015", "DOM"],
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   }
 } 
