--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "http-proxy-middleware": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
